Fixed navigation bar hiding when scrolling, including a bug where content wasn't visible on Mac/Safari

--- a/assets/stylesheet/_sass/_default.scss
+++ b/assets/stylesheet/_sass/_default.scss
@@ -87,8 +87,8 @@ html, body {
 	}
 }
 
-.header {
-	position: absolute;
+#header {
+	position: fixed;
 	top: 0;
 	right: 0;
 	height: 120px;
